[project]
name = "mememage"
description = "Stamp a verifiable Mememage bar into generated images (and read it back) — the image carries a key to data you control, optionally its own ComfyUI prompt."
version = "0.1.0"
license = { text = "MIT" }
dependencies = ["mememage"]

[project.urls]
Repository = "https://github.com/sememtac/mememage-comfy"

# ComfyUI registry metadata (registry.comfy.org). PublisherId must match the
# publisher account before `comfy node publish`.
[tool.comfy]
PublisherId = "catmemes"
DisplayName = "Mememage"
